// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Alert default 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 32px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 30px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
  background-color: rgba(0,0,0,0.16);
  padding: 0 8px;
}

.c1 .icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: rgba(255,255,255,0.56);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c1:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c1:focus {
  box-shadow: none;
}

.c1:hover .icon,
.c1:focus .icon {
  color: white;
}

.c1:hover {
  background-color: #3498db;
}

.c1:focus {
  background-color: #3498db;
}

.c1:disabled,
.c1:disabled .icon,
.c1:disabled:hover {
  color: rgba(0,0,0,0.32);
}

.c1:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c0 {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #3498db;
  box-shadow: 0 2px 2px 0 rgba(46,204,113,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  min-height: 72px;
  z-index: 2500;
}

.c0 > p {
  font-family: Lato,sans-serif;
  font-size: 18px;
  font-weight: 600;
  line-height: 1.33;
  text-align: center;
  color: #ffffff;
  margin: 0;
}

.c0 > .dismiss-button {
  position: absolute;
  top: 50%;
  margin-top: -16px;
  right: 24px;
}

<div
  className="c0"
  type="NEWS"
>
  <p>
    Default is set to news type, and have default onDismiss function that hides the alert.
  </p>
  <div
    className="dismiss-button"
  >
    <button
      className="c1"
      onClick={[Function]}
      size="SMALL"
      type="OFF_NEUTRAL"
    >
      <div
        className="icon left-icon"
        style={
          Object {
            "marginRight": 0,
          }
        }
      >
        <i
          className="wg-close"
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`Storyshots Alert default at bottom 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 32px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 30px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
  background-color: rgba(0,0,0,0.16);
  padding: 0 8px;
}

.c1 .icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: rgba(255,255,255,0.56);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c1:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c1:focus {
  box-shadow: none;
}

.c1:hover .icon,
.c1:focus .icon {
  color: white;
}

.c1:hover {
  background-color: #3498db;
}

.c1:focus {
  background-color: #3498db;
}

.c1:disabled,
.c1:disabled .icon,
.c1:disabled:hover {
  color: rgba(0,0,0,0.32);
}

.c1:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c0 {
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #3498db;
  box-shadow: 0 2px 2px 0 rgba(46,204,113,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  min-height: 72px;
  z-index: 2500;
}

.c0 > p {
  font-family: Lato,sans-serif;
  font-size: 18px;
  font-weight: 600;
  line-height: 1.33;
  text-align: center;
  color: #ffffff;
  margin: 0;
}

.c0 > .dismiss-button {
  position: absolute;
  top: 50%;
  margin-top: -16px;
  right: 24px;
}

<div
  className="c0"
  type="NEWS"
>
  <p>
    Default is set to news type, and have default onDismiss function that hides the alert.
  </p>
  <div
    className="dismiss-button"
  >
    <button
      className="c1"
      onClick={[Function]}
      size="SMALL"
      type="OFF_NEUTRAL"
    >
      <div
        className="icon left-icon"
        style={
          Object {
            "marginRight": 0,
          }
        }
      >
        <i
          className="wg-close"
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`Storyshots Alert extended style 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 32px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 30px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
  background-color: rgba(0,0,0,0.16);
  padding: 0 8px;
}

.c2 .icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: rgba(255,255,255,0.56);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c2:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c2:focus {
  box-shadow: none;
}

.c2:hover .icon,
.c2:focus .icon {
  color: white;
}

.c2:hover {
  background-color: #3498db;
}

.c2:focus {
  background-color: #3498db;
}

.c2:disabled,
.c2:disabled .icon,
.c2:disabled:hover {
  color: rgba(0,0,0,0.32);
}

.c2:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c0 {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #3498db;
  box-shadow: 0 2px 2px 0 rgba(46,204,113,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  min-height: 72px;
  z-index: 2500;
}

.c0 > p {
  font-family: Lato,sans-serif;
  font-size: 18px;
  font-weight: 600;
  line-height: 1.33;
  text-align: center;
  color: #ffffff;
  margin: 0;
}

.c0 > .dismiss-button {
  position: absolute;
  top: 50%;
  margin-top: -16px;
  right: 24px;
}

.c1 {
  -webkit-transform: rotate(5deg);
  -ms-transform: rotate(5deg);
  transform: rotate(5deg);
}

<div
  className="c0 c1"
  type="NEWS"
>
  <p>
    Extended with 'transform: rotate(5deg)'
  </p>
  <div
    className="dismiss-button"
  >
    <button
      className="c2"
      onClick={[Function]}
      size="SMALL"
      type="OFF_NEUTRAL"
    >
      <div
        className="icon left-icon"
        style={
          Object {
            "marginRight": 0,
          }
        }
      >
        <i
          className="wg-close"
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`Storyshots Alert non dismissable 1`] = `
.c0 {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #3498db;
  box-shadow: 0 2px 2px 0 rgba(46,204,113,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  min-height: 72px;
  z-index: 2500;
}

.c0 > p {
  font-family: Lato,sans-serif;
  font-size: 18px;
  font-weight: 600;
  line-height: 1.33;
  text-align: center;
  color: #ffffff;
  margin: 0;
}

.c0 > .dismiss-button {
  position: absolute;
  top: 50%;
  margin-top: -16px;
  right: 24px;
}

<div
  className="c0"
  type="NEWS"
>
  <p>
    I can't be dismissed!
  </p>
</div>
`;

exports[`Storyshots Alert type attention 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 32px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 30px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
  background-color: rgba(0,0,0,0.16);
  padding: 0 8px;
}

.c1 .icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: rgba(255,255,255,0.56);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c1:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c1:focus {
  box-shadow: none;
}

.c1:hover .icon,
.c1:focus .icon {
  color: white;
}

.c1:hover {
  background-color: #3498db;
}

.c1:focus {
  background-color: #3498db;
}

.c1:disabled,
.c1:disabled .icon,
.c1:disabled:hover {
  color: rgba(0,0,0,0.32);
}

.c1:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c0 {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f1c618;
  box-shadow: 0 2px 2px 0 rgba(46,204,113,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  min-height: 72px;
  z-index: 2500;
}

.c0 > p {
  font-family: Lato,sans-serif;
  font-size: 18px;
  font-weight: 600;
  line-height: 1.33;
  text-align: center;
  color: #2f313a;
  margin: 0;
}

.c0 > .dismiss-button {
  position: absolute;
  top: 50%;
  margin-top: -16px;
  right: 24px;
}

<div
  className="c0"
  type="ATTENTION"
>
  <p>
    Attention alert!
  </p>
  <div
    className="dismiss-button"
  >
    <button
      className="c1"
      onClick={[Function]}
      size="SMALL"
      type="OFF_NEUTRAL"
    >
      <div
        className="icon left-icon"
        style={
          Object {
            "marginRight": 0,
          }
        }
      >
        <i
          className="wg-close"
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`Storyshots Alert type negative 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 32px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 30px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
  background-color: rgba(0,0,0,0.16);
  padding: 0 8px;
}

.c1 .icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: rgba(255,255,255,0.56);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c1:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c1:focus {
  box-shadow: none;
}

.c1:hover .icon,
.c1:focus .icon {
  color: white;
}

.c1:hover {
  background-color: #3498db;
}

.c1:focus {
  background-color: #3498db;
}

.c1:disabled,
.c1:disabled .icon,
.c1:disabled:hover {
  color: rgba(0,0,0,0.32);
}

.c1:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c0 {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #dd3311;
  box-shadow: 0 2px 2px 0 rgba(46,204,113,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  min-height: 72px;
  z-index: 2500;
}

.c0 > p {
  font-family: Lato,sans-serif;
  font-size: 18px;
  font-weight: 600;
  line-height: 1.33;
  text-align: center;
  color: #ffffff;
  margin: 0;
}

.c0 > .dismiss-button {
  position: absolute;
  top: 50%;
  margin-top: -16px;
  right: 24px;
}

<div
  className="c0"
  type="NEGATIVE"
>
  <p>
    Negative alert!
  </p>
  <div
    className="dismiss-button"
  >
    <button
      className="c1"
      onClick={[Function]}
      size="SMALL"
      type="OFF_NEUTRAL"
    >
      <div
        className="icon left-icon"
        style={
          Object {
            "marginRight": 0,
          }
        }
      >
        <i
          className="wg-close"
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`Storyshots Alert type news 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 32px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 30px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
  background-color: rgba(0,0,0,0.16);
  padding: 0 8px;
}

.c1 .icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: rgba(255,255,255,0.56);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c1:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c1:focus {
  box-shadow: none;
}

.c1:hover .icon,
.c1:focus .icon {
  color: white;
}

.c1:hover {
  background-color: #3498db;
}

.c1:focus {
  background-color: #3498db;
}

.c1:disabled,
.c1:disabled .icon,
.c1:disabled:hover {
  color: rgba(0,0,0,0.32);
}

.c1:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c0 {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #3498db;
  box-shadow: 0 2px 2px 0 rgba(46,204,113,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  min-height: 72px;
  z-index: 2500;
}

.c0 > p {
  font-family: Lato,sans-serif;
  font-size: 18px;
  font-weight: 600;
  line-height: 1.33;
  text-align: center;
  color: #ffffff;
  margin: 0;
}

.c0 > .dismiss-button {
  position: absolute;
  top: 50%;
  margin-top: -16px;
  right: 24px;
}

<div
  className="c0"
  type="NEWS"
>
  <p>
    New alert!
  </p>
  <div
    className="dismiss-button"
  >
    <button
      className="c1"
      onClick={[Function]}
      size="SMALL"
      type="OFF_NEUTRAL"
    >
      <div
        className="icon left-icon"
        style={
          Object {
            "marginRight": 0,
          }
        }
      >
        <i
          className="wg-close"
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`Storyshots Alert type positive 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 32px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 30px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
  background-color: rgba(0,0,0,0.16);
  padding: 0 8px;
}

.c1 .icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: rgba(255,255,255,0.56);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c1:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c1:focus {
  box-shadow: none;
}

.c1:hover .icon,
.c1:focus .icon {
  color: white;
}

.c1:hover {
  background-color: #3498db;
}

.c1:focus {
  background-color: #3498db;
}

.c1:disabled,
.c1:disabled .icon,
.c1:disabled:hover {
  color: rgba(0,0,0,0.32);
}

.c1:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c0 {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #2ecc71;
  box-shadow: 0 2px 2px 0 rgba(46,204,113,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  min-height: 72px;
  z-index: 2500;
}

.c0 > p {
  font-family: Lato,sans-serif;
  font-size: 18px;
  font-weight: 600;
  line-height: 1.33;
  text-align: center;
  color: #ffffff;
  margin: 0;
}

.c0 > .dismiss-button {
  position: absolute;
  top: 50%;
  margin-top: -16px;
  right: 24px;
}

<div
  className="c0"
  type="POSITIVE"
>
  <p>
    Positive alert!
  </p>
  <div
    className="dismiss-button"
  >
    <button
      className="c1"
      onClick={[Function]}
      size="SMALL"
      type="OFF_NEUTRAL"
    >
      <div
        className="icon left-icon"
        style={
          Object {
            "marginRight": 0,
          }
        }
      >
        <i
          className="wg-close"
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`Storyshots Alert visibleTime 2 seconds 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 32px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 30px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
  background-color: rgba(0,0,0,0.16);
  padding: 0 8px;
}

.c1 .icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: rgba(255,255,255,0.56);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c1:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c1:focus {
  box-shadow: none;
}

.c1:hover .icon,
.c1:focus .icon {
  color: white;
}

.c1:hover {
  background-color: #3498db;
}

.c1:focus {
  background-color: #3498db;
}

.c1:disabled,
.c1:disabled .icon,
.c1:disabled:hover {
  color: rgba(0,0,0,0.32);
}

.c1:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c0 {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #3498db;
  box-shadow: 0 2px 2px 0 rgba(46,204,113,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  min-height: 72px;
  z-index: 2500;
}

.c0 > p {
  font-family: Lato,sans-serif;
  font-size: 18px;
  font-weight: 600;
  line-height: 1.33;
  text-align: center;
  color: #ffffff;
  margin: 0;
}

.c0 > .dismiss-button {
  position: absolute;
  top: 50%;
  margin-top: -16px;
  right: 24px;
}

<div
  className="c0"
  type="NEWS"
>
  <p>
    This message will self-destruct in 2 seconds
  </p>
  <div
    className="dismiss-button"
  >
    <button
      className="c1"
      onClick={[Function]}
      size="SMALL"
      type="OFF_NEUTRAL"
    >
      <div
        className="icon left-icon"
        style={
          Object {
            "marginRight": 0,
          }
        }
      >
        <i
          className="wg-close"
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`Storyshots Alert with custom z-index 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 32px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 30px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
  background-color: rgba(0,0,0,0.16);
  padding: 0 8px;
}

.c1 .icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: rgba(255,255,255,0.56);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c1:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c1:focus {
  box-shadow: none;
}

.c1:hover .icon,
.c1:focus .icon {
  color: white;
}

.c1:hover {
  background-color: #3498db;
}

.c1:focus {
  background-color: #3498db;
}

.c1:disabled,
.c1:disabled .icon,
.c1:disabled:hover {
  color: rgba(0,0,0,0.32);
}

.c1:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c0 {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #3498db;
  box-shadow: 0 2px 2px 0 rgba(46,204,113,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  min-height: 72px;
  z-index: 11;
}

.c0 > p {
  font-family: Lato,sans-serif;
  font-size: 18px;
  font-weight: 600;
  line-height: 1.33;
  text-align: center;
  color: #ffffff;
  margin: 0;
}

.c0 > .dismiss-button {
  position: absolute;
  top: 50%;
  margin-top: -16px;
  right: 24px;
}

<div>
  <div
    style={
      Object {
        "background": "gray",
        "height": 120,
        "position": "absolute",
        "width": 120,
        "zIndex": 10,
      }
    }
  />
  <div
    style={
      Object {
        "background": "rgba(0, 0, 0, 0.7)",
        "height": 100,
        "position": "absolute",
        "width": 100,
        "zIndex": 12,
      }
    }
  />
  <div
    className="c0"
    type="NEWS"
  >
    <p>
      should display between the two
    </p>
    <div
      className="dismiss-button"
    >
      <button
        className="c1"
        onClick={[Function]}
        size="SMALL"
        type="OFF_NEUTRAL"
      >
        <div
          className="icon left-icon"
          style={
            Object {
              "marginRight": 0,
            }
          }
        >
          <i
            className="wg-close"
          />
        </div>
      </button>
    </div>
  </div>
</div>
`;
